<resources>
    <string name="app_name">WHAT_NEXT</string>
    <string name="username">username</string>
    <string name="add_your_projects_here">Add Your Projects Here</string>
    <string name="show_events">Show Events</string>
    <string name="organise_event">Organise Event</string>
    <string name="user_name">User Name</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="new_user_join_today">New User? Join Today</string>
    <string name="get_started">Get Started</string>
    <string name="what_s_next">WHAT\'S NEXT?</string>
    <string name="todo">TODO</string>
    <string name="be_your_own_boss">BE YOUR OWN BOSS !</string>
    <string name="change_your_profile">Change Your Profile</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="_12_items">12 Items</string>
    <string name="calender">Calender</string>
    <string name="funding">Funding</string>
    <string name="innovations">Innovations</string>
    <string name="meetings">Meetings</string>
    <string name="startups">Startups</string>
    <string name="seminars">Seminars</string>
    <string name="event_details">Event Details</string>
    <string name="event_is_about_to_show_you_the_showcase_of_the_a_k_t_u_level_technical_competition_it_might_be_your_next_inspiration_to_develop">Event Is About To Show You The Showcase Of The A.K.T.U. Level Technical Competition.It Might Be Your Next Inspiration To Develop.</string>
    <string name="november_22">NOVEMBER 30</string>
    <string name="innotech">INNOTECH..</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="user_email">User eMail</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="add_project">Add Project</string>
    <string name="profile">Profile</string>
    <string name="event">Event</string>
    <string name="chat_now">Chat Now</string>
    <string name="already_a_user">Already A User</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacts_fragments">Contacts Fragments</string>
    <string name="groups_fragment">Groups Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="forget_password">Forget Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_login_using_your">or Login using your</string>
    <string name="phone_no">Phone No</string>
    <string name="find_new_buddy">Find New Buddy</string>
    <string name="settings">Settings</string>
    <string name="hey_review_my_project">Hey,Review My Projects...</string>
    <string name="create_group">Create Group</string>
    <string name="write_a_msg_here">Write a msg here...</string>
    <string name="start_a_discussion_here">Start a discussion here...</string>
    <string name="enter_verification_code_here">Enter verification code here.</string>
    <string name="enter_a_phone_no">Enter a phone no</string>
    <string name="usernamea">Username</string>
    <string name="update_profile">Update Profile</string>
</resources>
