<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/bglogin"
    tools:context=".login">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/log_in"
        android:textColor="#FFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/textView3"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="127dp"
        android:background="@drawable/bgbtn"
        android:hint="@string/user_name"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textView4"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bgbtn"
        android:hint="@string/password"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:inputType="textWebPassword"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

     <Button
        android:id="@+id/button2"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bgbtn"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/forgot_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:text="@string/forgot_password"
        android:textColor="#FFF"
        android:layout_marginTop="2dp"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/login_with_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/or_login_using_your"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/phone_login_button"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/bgbtn"
        android:text="@string/phone_no"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_with_other"
        app:layout_constraintVertical_bias="0.293" />



    <Button
        android:id="@+id/button5"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="453dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/bgbtn"
        android:text="@string/new_user_join_today"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.293" />


</androidx.constraintlayout.widget.ConstraintLayout>