<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".showevents">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="219dp"
        android:background="@drawable/eventimage"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details"
        android:textColor="#FFF"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="224dp"
        android:background="@drawable/bgeventdetail"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/innotech"
            android:textColor="#4a4a4a"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/event_is_about_to_show_you_the_showcase_of_the_a_k_t_u_level_technical_competition_it_might_be_your_next_inspiration_to_develop"
            android:textColor="#c9c9c9"
            android:textSize="16sp" />

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/btndate"
            android:text="@string/november_22"
            android:textColor="#537EFF" />

    </LinearLayout>

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="21dp"

        android:layout_marginEnd="21dp"
        android:layout_marginBottom="58dp"
        android:background="@drawable/btndetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_editor_absoluteX="30dp"
        app:layout_editor_absoluteY="588dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iconevent"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>